limited amount of uniform data stored in yml data file

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: EasyClaim
 version: '${project.version}'
-main: me.kapsel.easyclaim.EasyClaim
+main: me.kapsel.easyclaim.Main
 api-version: 1.18
 authors: [ kapsel ]
 depend:
